force-app/main/default/objects/Question_Availability__c/Question_Availability__c.object-meta.xml
<CustomObject>
    <description>Custom object to define the availability of questions for different FENC assessment activities</description>
    <label>Question Availability</label>
    <nameField>
        <displayFormat>QEA-{00000}</displayFormat>
        <label>Question Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>