force-app/main/default/objects/Question_Availability__c/fields/Category_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Category_Level_1__c</fullName>
    <description>Text field used to capture the category level 1 of a question.</description>
    <label>Category Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>