force-app/main/default/objects/Question_Availability__c/fields/Question_Definition__c.field-meta.xml
<CustomField>
    <fullName>Question_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Definition</label>
    <referenceTo>Question_Definition__c</referenceTo>
    <relationshipLabel>Question Availabilities</relationshipLabel>
    <relationshipName>Question_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>