force-app/main/default/objects/Question_Availability__c/fields/Question_Order__c.field-meta.xml
<CustomField>
    <fullName>Question_Order__c</fullName>
    <label>Question Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>