force-app/main/default/objects/Question_Availability__c/fields/Questionnaire_Type__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Type</label>
    <referenceTo>Questionnaire_Type__c</referenceTo>
    <relationshipLabel>Question Availabilities</relationshipLabel>
    <relationshipName>Question_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>