force-app/main/default/objects/Question_Availability__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Text field used to capture the section header of a questionnaire.</description>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>