force-app/main/default/objects/Question_Availability__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Questionnaire_Type__c</columns>
    <columns>Question_Definition__c</columns>
    <columns>Question_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>